--- a/index.html
+++ b/index.html
@@ -5,44 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href=".css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 </head>
 
-
-<body>
-<header>
-    <div class="header"></div>
-    <h2>About me!</h2>
-    <p>I am a coding student with an extensive background in technology, but nothing coding related.
-        I am excited to learn more, and put my newly learned skills to work!
-    </p>
+<header id="header">
+<nav class="navbar">
+   <a href="#about-me" class="nav-link">About Me</a>
+    <a href="#job-history" class="nav-link">Job History</a>
+   <a href="#certificates" class="nav-link">Certifications</a>
+   <a href="#contact-me" class="nav-link">Contact Me!</a>
+    </nav>
+    <img src="https://plus.unsplash.com/premium_photo-1678565869434-c81195861939?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+    style="height: 150px; width: 100%; opacity: 75%;">
 </header>
 
-<section>
-<nav class="nav">
-    <a href="Projects"></a>
-    <a href="Qualifications"></a>
-    <a href="Certificates"></a>
-    <a href="Job History"></a>
-</section>
-</nav>
-
 <main>
-    <section class="container">
-        <div class="Projects">
-            <header>Projects</header>
-            <img src="#" alt="placeholder">
-     <div class="Qualifications">
-        <header>Qualifications</header>
-        <div class="Certificates">
-            <header>Certifications</header>
-        <div class="Job History">
-            <header>Job History</header>
+<body>
 
+</section>
+<div class="sidebar">
+    <a><div>About Me</div></a>
+    <div>Job History</div>
+    <div>Certifications</div>
+    <a><div>Contact Me!</div></a>
+</section>
+
+<section>
+</div>
+<div class="body-text">
+    <div>My Personal Portfolio!</div>
+    <br>
+</div>
+<div class="p1">
+<p>Hello! My name is Tessa Andrews, and I am extremely new to coding. Growing up, I have always been extremely fascinated by technology and the growth of the field in the recent years. I hope to partake in the future systems that we will use in the upcoming years.</p>
+</section>
+<section>
+    <br>
+    <br>
+    <br>
+    <p>
+        <img src="https://picsum.photos/id/152/1200/1200" alt="flower"
+        style="height: 200px; width: 200px; opacity: 50%;">
+    </br>
+    </p>
+</section>
+<section>
+
+</body>
+
+
+<div class="footer-content">
+    <div>Contact Info</div>
+    <p><strong>Email: </strong><a href="#">tessa4158@icloud.com</p></a>
+    <p><strong>Linkdn: </strong><a href="#">Tessa Andrews</p></a>
+    <p><strong> Number: </strong><a href="#">920-412-4171</p></a>
+    </p>
+</div>
 
 </main>
-</body>
-<footer class="footer">
-    <p>Contact Me!</p>
-</footer>
 
 </html>
