--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 
 <header id="header">
 <nav class="navbar">
-   <a href="#about-me" class="nav-link">About Me</a>
-    <a href="#job-history" class="nav-link">Job History</a>
-   <a href="#certificates" class="nav-link">Certifications</a>
-   <a href="#contact-me" class="nav-link">Contact Me!</a>
-    </nav>
-    <img src="https://plus.unsplash.com/premium_photo-1678565869434-c81195861939?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+   <a href="#about-me" class="nav-link">About Me </a>
+    <a href="#job-history" class="nav-link">Job History </a>
+   <a href="#certificates" class="nav-link">Certifications </a>
+   <a href="#contact-me" class="nav-link">Contact Me! </a>
+   </nav>
+<img src="/Users/tessaandrews/Downloads/1678926486753.png"
+style="height: 200px;>
+
+<img src= "https://plus.unsplash.com/premium_photo-1678565869434-c81195861939?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="computer"
     style="height: 150px; width: 100%; opacity: 75%;">
+
 </header>
 
 <main>
@@ -24,20 +28,21 @@
 
 </section>
 <div class="sidebar">
-    <a><div>About Me</div></a>
-    <div>Job History</div>
-    <div>Certifications</div>
-    <a><div>Contact Me!</div></a>
+    <div><a href="#">About Me</a></div>
+    <div><a href="#">Job History</div>
+    <div><a href="#">Certifications</a></div>
+    <div><a href="#">Contact Me!</a></div>
 </section>
 
 <section>
 </div>
 <div class="body-text">
+<div>Tessa Andrews</div>
+<br>
     <div>My Personal Portfolio!</div>
-    <br>
 </div>
 <div class="p1">
-<p>Hello! My name is Tessa Andrews, and I am extremely new to coding. Growing up, I have always been extremely fascinated by technology and the growth of the field in the recent years. I hope to partake in the future systems that we will use in the upcoming years.</p>
+<p>Hello! My name is Tessa Andrews, and I am extremely new to coding. Growing up, I have always been extremely fascinated by technology and the growth of the field in the recent years. I hope to partake in the future systems that we will use in the upcoming years. Growing up, technology has always been extremely fascinating and with the additions of new systems and learning the behind the scenes of web development, I am extremely excited.</p>
 </section>
 <section>
     <br>
@@ -45,19 +50,32 @@
     <br>
     <p>
         <img src="https://picsum.photos/id/152/1200/1200" alt="flower"
-        style="height: 200px; width: 200px; opacity: 50%;">
+        style="height: 200px; width: 100%; opacity: 25%;">
     </br>
+</br>
+<img src="https://cdn.pixabay.com/photo/2018/11/04/00/02/web-page-3793072_1280.png" alt="computer"
+style="height: 200px; width: 100%; opacity: 25%;">
     </p>
+    <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="computer"
+style= "height: 200px; width: 100%; opacity: 25%">
+    <br>
+    <br>
+    <br>
 </section>
 <section>
 
 </body>
 
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="footer-content">
     <div>Contact Info</div>
     <p><strong>Email: </strong><a href="#">tessa4158@icloud.com</p></a>
-    <p><strong>Linkdn: </strong><a href="#">Tessa Andrews</p></a>
+    <p><strong>Linkdn: </strong><a href="https://www.linkedin.com/in/tessa-andrews-118b33221/">Tessa Andrews</p></a>
     <p><strong> Number: </strong><a href="#">920-412-4171</p></a>
     </p>
 </div>
