--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
    <a href="#certificates" class="nav-link">Certifications </a>
    <a href="#contact-me" class="nav-link">Contact Me! </a>
    </nav>
-<img src="/Users/tessaandrews/Downloads/1678926486753.png"
-style="height: 200px;>
+   <br>
+<img src="/Users/tessaandrews/Downloads/1678926486753.png" alt="self-portrait"
+style="height: 300px";> 
 
-<img src= "https://plus.unsplash.com/premium_photo-1678565869434-c81195861939?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="computer"
-    style="height: 150px; width: 100%; opacity: 75%;">
 
 </header>
 
